continued styling work

--- a/SoundLabSocial/Views/Playlist/Details.cshtml
+++ b/SoundLabSocial/Views/Playlist/Details.cshtml
@@ -4,136 +4,132 @@
     ViewBag.Title = "Playlist Details";
 }
 
-<h2>Playlist Details</h2>
-
 <div>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.PlaylistId)
-        </dt>
+    <div class="col-md-12">
+        <br />
+        <h2>Playlist Details</h2>
 
-        <dd>
-            @Html.DisplayFor(model => model.PlaylistId)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PlaylistName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PlaylistName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedUTC)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedUTC)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ModifiedUTC)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ModifiedUTC)
-        </dd>
-
-    </dl>
-
-    <hr />
-    <h3>Personal Playlist Messages</h3>
-
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.PersonalAudios.First().AudioName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PersonalAudios.First().AudioMessage)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedUTC)
-            </th>
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model.PersonalAudios)
-        {
+        <table class="table">
             <tr>
-                @Html.HiddenFor(modelItem => item.PersonalAudioId)
-                <td>
-                    @Html.DisplayFor(modelItem => item.AudioName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AudioMessage)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreatedUTC)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.PersonalAudioId }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.PersonalAudioId }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.PersonalAudioId })
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.PlaylistId)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.PlaylistName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CreatedUTC)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ModifiedUTC)
+                </th>
+                <th></th>
             </tr>
-        }
-    </table>
-
-    <hr />
-    <h3>Playlist Songs</h3>
-
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Songs.First().SongName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Songs.First().SongArtist)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Songs.First().SongAlbum)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Songs.First().ReleaseYear)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedUTC)
-            </th>
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model.Songs)
-        {
             <tr>
-                @Html.HiddenFor(modelItem => item.SongId)
                 <td>
-                    @Html.DisplayFor(modelItem => item.SongName)
+                    @Html.DisplayFor(model => model.PlaylistId)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.SongArtist)
+                    @Html.DisplayFor(model => model.PlaylistName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.SongAlbum)
+                    @Html.DisplayFor(model => model.CreatedUTC)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.ReleaseYear)
+                    @Html.DisplayFor(model => model.ModifiedUTC)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreatedUTC)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.SongId }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.SongId }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.SongId })
-                </td>
+                <th></th>
             </tr>
-        }
-    </table>
+        </table>
+    </div>
+
+    <div class="col-md-6">
+        <br />
+        <h2>Playlist Songs</h2>
+
+        <table class="table">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Songs.First().SongName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Songs.First().SongArtist)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Songs.First().SongAlbum)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Songs.First().ReleaseYear)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CreatedUTC)
+                </th>
+                <th></th>
+            </tr>
+
+            @foreach (var item in Model.Songs)
+            {
+                <tr>
+                    @Html.HiddenFor(modelItem => item.SongId)
+                    <td>
+                        @Html.DisplayFor(modelItem => item.SongName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.SongArtist)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.SongAlbum)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ReleaseYear)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CreatedUTC)
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
+
+    <div class="col-md-6">
+        <br />
+        <h2>Playlist Messages</h2>
+
+        <table class="table">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.PersonalAudios.First().AudioName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.PersonalAudios.First().AudioMessage)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CreatedUTC)
+                </th>
+                <th></th>
+            </tr>
+
+            @foreach (var item in Model.PersonalAudios)
+            {
+                <tr>
+                    @Html.HiddenFor(modelItem => item.PersonalAudioId)
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AudioName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AudioMessage)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CreatedUTC)
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit Playlist", "Edit", new {  id = Model.PlaylistId  }) |
+
+<div class="col-md-12">
+    @Html.ActionLink("Edit Playlist", "Edit", new { id = Model.PlaylistId }) |
     @Html.ActionLink("Back to Playlist List", "Index")
-</p>
+    <hr />
+</div>
