--- a/SoundLabSocial/Views/Home/Index.cshtml
+++ b/SoundLabSocial/Views/Home/Index.cshtml
@@ -3,41 +3,38 @@
 }
 
 <div class="container">
-    <div class="row">
+    <br />
+    <br />
+    <row>
         <div class="col-md-6">
             <div class="jumbotron">
                 <h1>Find New Music...Share Old Memories</h1>
-                <p class="lead">We really like music. Like, a lot! But the crap they play on the radio is...ugh.</p>
+                <p class="lead">We really like music. Like, a lot! But good music can be hard to find these days. I'm looking at you radio...Click below to try out a playlist full of random awesomeness!</p>
                 <p><a href="https://open.spotify.com/playlist/0zgp1QLPlx5Ph2cX8QU4io" class="btn btn-primary btn-lg" target="_blank">Awesome Sample Playlist &raquo;</a></p>
             </div>
         </div>
-        
-        <div class="col-md-6">
-            <h2>Think About It</h2>
-            <p>
-                The oldies station has over 100 years of music to choose from, but insists on playing the same 30 songs on repeat. If we hear 'Back In Black' or 'Rocketman' one more time we're gonna lose it.
-                Good Songs + Mindless Repition = Bad Songs. It's science!
-            </p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Add Better Songs &raquo;</a></p>
 
-            <h2>Here At Sound Lab</h2>
+        <div class="col-md-6">
+            <br />
+            <h2>Here At Sound Lab...</h2>
             <p>
                 We believe good music shouldn't be hard to find. So, we went out of our way to make it easy for you! Now, you can share new music through your own custom built playlists or
                 by letting us build playlists for you. We promise it'll be good! However, if you don't like our playlists, we'd like to give you a money back guarantee, but that's not currently in our budget.
                 Maybe next year!
             </p>
             <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Create Awesome Playlists &raquo;</a></p>
+        </div>
 
-            <h2>Make It Personal</h2>
+        <div class="col-md-6">
+            <h2>Make It Personal...</h2>
             <p>
                 Do you remember the first time you heard a song that got you through a tough time? Or maybe that song you heard, didn't know, but had to know, so you Shazamed it as fast
                 as you could?! Yeah, we know there are millions of those memories just waiting to be told. Sound Lab Social was created with this in mind. We want to share great music,
                 but also the personal stories behind the music. So, we created a way to make this happen! Record personal audio of the music included in your playlist and the memories tied to them.
-                Attach these recordings to your playlists and share them with friends.
-                Not only
+                Attach these recordings to your playlists and share them with friends!
             </p>
             <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Record Personal Memories &raquo;</a></p>
         </div>
-    </div>
+    </row>
 </div>
 
