--- a/SoundLabSocial/Views/Shared/_Layout.cshtml
+++ b/SoundLabSocial/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Sound Lab Social</p>
+            <p class="footer">&copy; @DateTime.Now.Year - Sound Lab Social</p>
         </footer>
     </div>
 
