continued styling work BUT deploying to Azure/time constraints/full functionality/terminology/just needs paint

--- a/SoundLabSocial/Views/Home/Index.cshtml
+++ b/SoundLabSocial/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
                 by letting us build playlists for you. We promise it'll be good! However, if you don't like our playlists, we'd like to give you a money back guarantee, but that's not currently in our budget.
                 Maybe next year!
             </p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Create Awesome Playlists &raquo;</a></p>
+            <p><a class="btn btn-default" href="https://github.com/tipowers/Sound-Lab-Social" target="_blank">Create Awesome Playlists &raquo;</a></p>
         </div>
 
         <div class="col-md-6">
@@ -33,7 +33,7 @@
                 but also the personal stories behind the music. So, we created a way to make this happen! Record personal audio of the music included in your playlist and the memories tied to them.
                 Attach these recordings to your playlists and share them with friends!
             </p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Record Personal Memories &raquo;</a></p>
+            <p><a class="btn btn-default" href="https://www.linkedin.com/in/tim-powers-0123/" target="_blank">Record Personal Memories &raquo;</a></p>
         </div>
     </row>
 </div>
