final final push before 11/50 submission

--- a/SoundLabSocial/Content/Site.css
+++ b/SoundLabSocial/Content/Site.css
@@ -1,6 +1,11 @@
-﻿body {
+﻿.navbar {
+    background-color: maroon;
+}
+
+body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: burlywood;
 }
 
 /* Set padding to keep content from hitting the edges */
