--- a/SoundLabSocial/Views/Home/Index.cshtml
+++ b/SoundLabSocial/Views/Home/Index.cshtml
@@ -7,25 +7,24 @@
     <br />
     <row>
         <div class="col-md-6">
-            <div class="jumbotron">
+            <div style="background-color: bisque" class="jumbotron">
                 <h1>Find New Music...Share Old Memories</h1>
                 <p class="lead">We really like music. Like, a lot! But good music can be hard to find these days. I'm looking at you radio...Click below to try out a playlist full of random awesomeness!</p>
                 <p><a href="https://open.spotify.com/playlist/0zgp1QLPlx5Ph2cX8QU4io" class="btn btn-primary btn-lg" target="_blank">Awesome Sample Playlist &raquo;</a></p>
             </div>
         </div>
 
-        <div class="col-md-6">
-            <br />
+        <div class="col-md-5">
             <h2>Here At Sound Lab...</h2>
             <p>
                 We believe good music shouldn't be hard to find. So, we went out of our way to make it easy for you! Now, you can share new music through your own custom built playlists or
                 by letting us build playlists for you. We promise it'll be good! However, if you don't like our playlists, we'd like to give you a money back guarantee, but that's not currently in our budget.
                 Maybe next year!
             </p>
-            <p><a class="btn btn-default" href="https://github.com/tipowers/Sound-Lab-Social" target="_blank">Create Awesome Playlists &raquo;</a></p>
+            <p><a class="btn btn-primary" href="https://github.com/tipowers/Sound-Lab-Social" target="_blank">Create Awesome Playlists &raquo;</a></p>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-5">
             <h2>Make It Personal...</h2>
             <p>
                 Do you remember the first time you heard a song that got you through a tough time? Or maybe that song you heard, didn't know, but had to know, so you Shazamed it as fast
@@ -33,7 +32,7 @@
                 but also the personal stories behind the music. So, we created a way to make this happen! Record personal audio of the music included in your playlist and the memories tied to them.
                 Attach these recordings to your playlists and share them with friends!
             </p>
-            <p><a class="btn btn-default" href="https://www.linkedin.com/in/tim-powers-0123/" target="_blank">Record Personal Memories &raquo;</a></p>
+            <p><a class="btn btn-primary" href="https://www.linkedin.com/in/tim-powers-0123/" target="_blank">Record Personal Memories &raquo;</a></p>
         </div>
     </row>
 </div>
